# server/app/controllers.go
@@ -209,6 +209,8 @@ func MountSwaggerController(service *goa.Service, ctrl SwaggerController) {
 	var h goa.Handler
 	service.Mux.Handle("OPTIONS", "/swagger.json", ctrl.MuxHandler("preflight", handleSwaggerOrigin(cors.HandlePreflight()), nil))
 	service.Mux.Handle("OPTIONS", "/swaggerui/*filepath", ctrl.MuxHandler("preflight", handleSwaggerOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/viron_authtype", ctrl.MuxHandler("preflight", handleSwaggerOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/viron", ctrl.MuxHandler("preflight", handleSwaggerOrigin(cors.HandlePreflight()), nil))
 
 	h = ctrl.FileHandler("/swagger.json", "swagger/swagger.json")
 	h = handleSwaggerOrigin(h)
@@ -219,6 +221,16 @@ func MountSwaggerController(service *goa.Service, ctrl SwaggerController) {
 	h = handleSwaggerOrigin(h)
 	service.Mux.Handle("GET", "/swaggerui/*filepath", ctrl.MuxHandler("serve", h, nil))
 	service.LogInfo("mount", "ctrl", "Swagger", "files", "swaggerui/dist", "route", "GET /swaggerui/*filepath")
+
+	h = ctrl.FileHandler("/viron_authtype", "viron/authtype.json")
+	h = handleSwaggerOrigin(h)
+	service.Mux.Handle("GET", "/viron_authtype", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Swagger", "files", "viron/authtype.json", "route", "GET /viron_authtype")
+
+	h = ctrl.FileHandler("/viron", "viron/menu.json")
+	h = handleSwaggerOrigin(h)
+	service.Mux.Handle("GET", "/viron", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Swagger", "files", "viron/menu.json", "route", "GET /viron")
 
 	h = ctrl.FileHandler("/swaggerui/", "swaggerui/dist/index.html")
 	h = handleSwaggerOrigin(h)
@@ -242,55 +254,6 @@ func handleSwaggerOrigin(h goa.Handler) goa.Handler {
 			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
 				// We are handling a preflight request
 				rw.Header().Set("Access-Control-Allow-Methods", "OPTIONS, GET")
-				rw.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
-			}
-			return h(ctx, rw, req)
-		}
-
-		return h(ctx, rw, req)
-	}
-}
-
-// VironController is the controller interface for the Viron actions.
-type VironController interface {
-	goa.Muxer
-	goa.FileServer
-}
-
-// MountVironController "mounts" a Viron resource controller on the given service.
-func MountVironController(service *goa.Service, ctrl VironController) {
-	initService(service)
-	var h goa.Handler
-	service.Mux.Handle("OPTIONS", "/viron_authtype", ctrl.MuxHandler("preflight", handleVironOrigin(cors.HandlePreflight()), nil))
-	service.Mux.Handle("OPTIONS", "/viron", ctrl.MuxHandler("preflight", handleVironOrigin(cors.HandlePreflight()), nil))
-
-	h = ctrl.FileHandler("/viron_authtype", "viron/authtype.json")
-	h = handleVironOrigin(h)
-	service.Mux.Handle("GET", "/viron_authtype", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Viron", "files", "viron/authtype.json", "route", "GET /viron_authtype")
-
-	h = ctrl.FileHandler("/viron", "viron/menu.json")
-	h = handleVironOrigin(h)
-	service.Mux.Handle("GET", "/viron", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Viron", "files", "viron/menu.json", "route", "GET /viron")
-}
-
-// handleVironOrigin applies the CORS response headers corresponding to the origin.
-func handleVironOrigin(h goa.Handler) goa.Handler {
-
-	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
-		origin := req.Header.Get("Origin")
-		if origin == "" {
-			// Not a CORS request
-			return h(ctx, rw, req)
-		}
-		if cors.MatchOrigin(origin, "*") {
-			ctx = goa.WithLogContext(ctx, "origin", origin)
-			rw.Header().Set("Access-Control-Allow-Origin", origin)
-			rw.Header().Set("Access-Control-Allow-Credentials", "false")
-			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
-				// We are handling a preflight request
-				rw.Header().Set("Access-Control-Allow-Methods", "GET")
 				rw.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
 			}
 			return h(ctx, rw, req)
